--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,46 @@
-/*# sourceMappingURL=style.css.map */
+h1 {
+  text-align: center;
+}
+
+.calculator {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 30rem;
+  padding: 1rem;
+  margin: auto;
+  flex-direction: column;
+  width: 22rem;
+  border-radius: 2rem;
+  gap: 1rem;
+}
+.calculator * {
+  font-size: 1.5rem;
+  font-family: "Courier New", Courier, monospace;
+}
+.calculator .display {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  font-size: 3.4em;
+  padding: 0.4rem;
+  flex: 1;
+  direction: rtl;
+}
+.calculator .buttons {
+  gap: 0.1em;
+  flex: 7;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+.calculator .buttons button {
+  font-family: "Courier New", Courier, monospace;
+}
+
+.calculator {
+  background-color: #472b4b;
+}
+.calculator .display {
+  background-color: #79945f;
+}/*# sourceMappingURL=style.css.map */
