--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,15 @@
+html {
+  box-sizing: border-box;
+}
+
+*::before, *::after {
+  box-sizing: inherit;
+}
+
+img {
+  width: 100%;
+}
+
 h1 {
   text-align: center;
 }
