--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -23,11 +23,10 @@ h1 {
   border-radius: 2rem;
   gap: 1rem;
   .display {
-    @include centerflex();
     font-size: 3.4em;
     padding: .4rem;
     flex: 1;
-    direction: rtl;
+    text-align: right;
   }
   .buttons {
     gap: .1em;
