--- a/styles/style.css
+++ b/styles/style.css
@@ -31,13 +31,10 @@ h1 {
   font-family: "Courier New", Courier, monospace;
 }
 .calculator .display {
-  display: flex;
-  justify-content: center;
-  align-content: center;
   font-size: 3.4em;
   padding: 0.4rem;
   flex: 1;
-  direction: rtl;
+  text-align: right;
 }
 .calculator .buttons {
   gap: 0.1em;
