Create variables for more calculator colors

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,2 +1,5 @@
 $calc-color-bg: #472b4b;
 $calc-color-display: #79945f;
+$calc-color-operators: #be5555;
+$calc-color-darker: #1c152c;
+$calc-color-button: #ece2f5;
