Add colors as shadows to the base button colors

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,8 @@
-$calc-color-bg: #472b4b;
+$calc-color-bg: #302931;
 $calc-color-display: #79945f;
+$calc-color-button: hsl(272, 49%, 92%);
 $calc-color-operators: #be5555;
 $calc-color-darker: #1c152c;
-$calc-color-button: #ece2f5;
+$calc-color-button-press: #9b87a3;
+$calc-color-operators-press: #6d294b;
+$calc-color-darker-press: #08090f;
